--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,8 +14,12 @@ dependencies:
  
   
   cupertino_icons: ^1.0.2
+  flutter_mobx: ^2.0.2
+  mobx: ^2.0.4
+  mobx_codegen: ^2.0.3
 
 dev_dependencies:
+  build_runner: ^2.1.2
   flutter_test:
     sdk: flutter
   
