--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: pedal_commander
 description: A new Flutter project.
 
-publish_to: 'none' 
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -9,55 +9,27 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
+  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
- 
-  
-  cupertino_icons: ^1.0.2
   flutter_mobx: ^2.0.2
+  google_fonts: ^2.1.0
+  lib_msaadev:
+    git:
+      url: https://github.com/msaadev/lib_msaadev
   mobx: ^2.0.4
   mobx_codegen: ^2.0.3
 
 dev_dependencies:
   build_runner: ^2.1.2
-  flutter_test:
-    sdk: flutter
   
   flutter_lints: ^1.0.0
+  flutter_test:
+    sdk: flutter
 
 flutter:
 
-  
-  
-  
   uses-material-design: true
 
-  
   assets:
     - assets/images/
-
-  
-  
-
-  
-  
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
